Fixed footer Nav BUttons design and linking

--- a/index.html
+++ b/index.html
@@ -306,22 +306,16 @@
                 <img src="assets/images/logo.svg" alt="" class="footerLogo">
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="#about">About Us</a>
                     </li>
                     <li>
-                        <a href="#">About Us</a>
+                        <a href="#choose">Why Choose Us</a>
                     </li>
                     <li>
-                        <a href="#">Why Choose Us</a>
+                        <a href="#services">Our Services</a>
                     </li>
                     <li>
-                        <a href="#">Our Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Consultation and Strategy</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact Us</a>
+                        <a href="#inTouch">Get In Touch</a>
                     </li>
                 </ul>
                 <div class="footerSocial">
