potential fix to our services hover
Linked up get started to why choose us

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                     At ProductCraft, we take pride in being the driving force behind turning software ideas into reality.
                      Our commitment goes beyond delivering solutions – we are here to empower your vision, ensuring success in every step of your technological journey
                 </p>
-                <button>Learn More</button>
+                
+                <a href="#choose">
+                    <button>Learn More</button>
+                </a>
+                
             </div>
         </div>
     </section>
