Linked up get started button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <p>
                 Your Partner in Product Excellence. We help craft the solutions to bring your vision to life.
             </p>
+            <a href="#choose">
             <button>Get Started</button>
+            </a>
         </div>
     </section>
     <!-- banner section ends -->
