Added absolute file path for testing service page

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 experience to the table, offering tailored
                                 solutions to propel your business forward.
                             </p>
-                            <a href="services.html" class="learnMoreButton">Learn More</a>
+                            <a href="file:///C:/productcraft_solutions_repo/services.html" class="learnMoreButton">Learn More</a>
                         </div>
                     </div>
                     <div class="singleService">
@@ -177,7 +177,7 @@
                                 handle every aspect of the development
                                 lifecycle.
                             </p>
-                            <a href="services.html" class="learnMoreButton">Learn More</a>
+                            <a href="file:///C:/productcraft_solutions_repo/services.html" class="learnMoreButton">Learn More</a>
                         </div>
                     </div>
                     <div class="singleService">
@@ -191,7 +191,7 @@
                                 management expertise ensures your products meet
                                 market demands and exceed customer expectations
                             </p>
-                            <a href="services.html" class="learnMoreButton">Learn More</a>
+                            <a href="file:///C:/productcraft_solutions_repo/services.html" class="learnMoreButton">Learn More</a>
                         </div>
                     </div>
                     <div class="singleService">
@@ -205,7 +205,7 @@
                                 new customers by sending them a branded product
                                 directly to their doorstep.
                             </p>
-                            <a href="services.html" class="learnMoreButton">Learn More</a>
+                            <a href="file:///C:/productcraft_solutions_repo/services.html" class="learnMoreButton">Learn More</a>
                         </div>
                     </div>
                     <div class="singleService">
@@ -223,7 +223,7 @@
                                 solutions are in the hands of your users when
                                 they need them.
                             </p>
-                            <a href="services.html" class="learnMoreButton">Learn More</a>
+                            <a href="file:///C:/productcraft_solutions_repo/services.html" class="learnMoreButton">Learn More</a>
                         </div>
                     </div>
                     <div class="singleService">
@@ -238,7 +238,7 @@
                                 and quality assurance processes. We leave no
                                 room for errors.
                             </p>
-                            <a href="services.html" class="learnMoreButton">Learn More</a>
+                            <a href="file:///C:/productcraft_solutions_repo/services.html" class="learnMoreButton">Learn More</a>
                         </div>
                     </div>
                 </div>
