--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 alt=""
                             />
                         </div>
-                        <h3>Consultation and Strategy</h3>
+                        <h3>Consultation <br>&<br> Strategy</h3>
                         <div class="serviceText">
                             
                             <p>
@@ -231,7 +231,7 @@
                             <img src="assets/images/qa.svg" alt="" />
                         </div>
                         
-                        <h3>Testing & Quality Assurance</h3>
+                        <h3>Testing <br>&<br> Quality Assurance</h3>
                         <div class="serviceText">
                             <p>
                                 Ensure the reliability and performance of your
