Added & to service #5

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/strategy.png" alt="" />
                     </div>
-                    <h3>Product Management</h3>
+                    <h3>Holistic Product Management</h3>
                     <div class="serviceText">
                         <p> Navigate the complexities of product lifecycles with confidence with our holistic product management services. We offer comprehensive support at every stage of development, from ideation to launch and beyond. Our seasoned product managers work closely with you to define product requirements, prioritize features, and establish clear goals and timelines. </p>
                     </div>
@@ -126,7 +126,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/delivery-management.svg" alt="" />
                     </div>
-                    <h3>Rigorous Testing & Quality Assurance</h3>
+                    <h3>Rigorous Testing <br>&</br> Quality Assurance</h3>
                     <div class="serviceText">
                         <p> Ensure the reliability and performance of your software products with our rigorous testing and quality assurance services. We leave no stone unturned in our quest for perfection, conducting thorough testing at every stage of development. With meticulous attention to detail and a commitment to excellence, we identify and address potential risks before they impact your users, ensuring a seamless and enjoyable user experience. </p>
                     </div>
