Updated site content

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="chooseLeft">
                 <h2>Why Choose Us</h2>
                 <strong>Expertise</strong>
-                <p> At ProductCraft Solutions, we pride ourselves on the depth of expertise our team brings to the table. With a collective experience spanning diverse industries and technologies, our industry experts have a proven track record of delivering exceptional results. From seasoned project managers to visionary product strategists, our team is dedicated to bringing unparalleled expertise to every project we undertake. </p>
+                <p> With a powerhouse team boasting diverse industry experience and proven results, we deliver exceptional outcomes every time. Our team's collective expertise spans a wide range of industries and technologies, allowing us to tackle complex projects with confidence. From seasoned software developers to visionary product strategists, our experts are dedicated to bringing unmatched expertise to every project we undertake. </p>
                 <strong>Efficiency</strong>
                 <p> In today's fast-paced business environment, time is of the essence. That's why we prioritize efficiency in every aspect of our service delivery. Our streamlined approach to product, project, and quality assurance processes ensures that your development efforts are maximized without sacrificing quality. By leveraging the latest tools and methodologies, we optimize workflows, eliminate bottlenecks, and accelerate time-to-market, allowing you to stay ahead of the competition. </p>
                 <strong>Cost-Effective</strong>
@@ -152,12 +152,14 @@
             </div>
             <div class="offerRight">
                 <h2>What We Offer</h2>
+                <strong>Consultancy</strong>
+                <p> Expert guidance on product strategy, development, and innovation, encompassing both Technology Consultancy and general Product Consultancy.</p>
                 <strong>Product Project Management</strong>
-                <p> Efficiently manage your software projects from inception to successful delivery. Our goal is to ensure excellence at every step </p>
-                <strong>Technology Consultancy</strong>
-                <p> Receive expert advice aligned with the latest technology trends to enhance your business strategies </p>
+                <p> fficient management of software projects from inception to successful delivery. </p>
+                <strong>Software Development</strong>
+                <p> Expert software development services, leveraging cutting-edge technologies to build innovative solutions. </p>
                 <strong>Innovation Solutions</strong>
-                <p> Unlock innovative solutions that can propel your business forward. We are passionate about expressing new and better ideas. </p>
+                <p> Unlock innovative ideas and solutions that can propel your business forward. </p>
             </div>
         </div>
     </section>
