Fixed learn more linking to contact form

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h2>About <span>Us</span></h2>
                 <p> Welcome to ProductCraft Solutions, where innovation meets expertise! We are a dynamic team of seasoned professionals in the software and technology industry. With a wealth of experience under our belts, we pride ourselves on being the driving force behind turning software ideas into reality. Whether it's custom tech solutions or popular platforms like WordPress, Shopify, and Wix, we specialize in bringing your ideas to life. </p>
                 <p> Our commitment goes beyond delivering solutions – we are here to empower your vision, ensuring success in every step of your technological journey. </p>
-                <a href="#choose">
+                <a href="#inTouch">
                     <button>Learn More</button>
                 </a>
             </div>
