--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" type="image/png" href="C:\productcraft_solutions_repo\productCraft-solutions\assets\images\prcs favicon 32x32.png">
 </head>
 
 <body>
@@ -99,7 +100,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/qa.svg" alt="" />
                     </div>
-                    <h3>Dynamic Software Development <br>&</br> Developer Empowerment</h3>
+                    <h3>Dynamic Software Development <br>&</br>Platform Setup & Integration Made Easy </h3>
                     <div class="serviceText">
                         <p> Experience the power of dynamic software development and empower your team with our expertise. Our seasoned developers are dedicated to pushing boundaries and creating solutions that revolutionize industries. With a keen focus on innovation and collaboration, we harness the latest technologies and development methodologies to build robust, scalable, and feature-rich software products. </p>
                     </div>
