--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ProductCraft Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="icon" type="image/png" href="assets/images/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" href="assets/images/prcs%20gear%20favicon.png">
 </head>
 
 <body>
@@ -93,7 +93,7 @@
                     </div>
                     <h3> Strategic Consulting <br>&</br> Product Development </h3>
                     <div class="serviceText">
-                        <p> Unlock the potential of your ideas with our strategic consulting and product development services. From inception to implementation, we guide you through every step of the journey, crafting a roadmap tailored to your vision. Our seasoned experts collaborate closely with you to define goals, identify opportunities, and develop a comprehensive strategy that drives success. With a focus on dynamic software development and developer empowerment, we ensure your project is built with innovation and collaboration at its core. </p>
+                        <p> Unlock the potential of your ideas with our strategic consulting and product development services. From inception to implementation, we guide you through every step of the journey, crafting a roadmap tailored to your vision. Our seasoned experts collaborate closely with you to define goals, identify opportunities, and develop a comprehensive strategy that drives success. With a focus on dynamic software development and developer empowerment, we ensure your project is built with innovation and collaboration at its core.</p>
                     </div>
                 </div>
                 <div class="singleService">
