Updated our services header content

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/delivery-management.svg" alt="" />
                     </div>
-                    <h3> Strategic Consulting <br>&</br> Product Development </h3>
+                    <h3> Strategic Consulting</h3>
                     <div class="serviceText">
                         <p> Unlock the potential of your ideas with our strategic consulting and product development services. From inception to implementation, we guide you through every step of the journey, crafting a roadmap tailored to your vision. Our seasoned experts collaborate closely with you to define goals, identify opportunities, and develop a comprehensive strategy that drives success. With a focus on dynamic software development and developer empowerment, we ensure your project is built with innovation and collaboration at its core.</p>
                     </div>
@@ -100,7 +100,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/qa.svg" alt="" />
                     </div>
-                    <h3>Dynamic Software Development <br>&</br>Platform Setup & Integration Made Easy </h3>
+                    <h3>Product Development</h3>
                     <div class="serviceText">
                         <p> Experience the power of dynamic software development and empower your team with our expertise. Our seasoned developers are dedicated to pushing boundaries and creating solutions that revolutionize industries. With a keen focus on innovation and collaboration, we harness the latest technologies and development methodologies to build robust, scalable, and feature-rich software products. </p>
                     </div>
@@ -109,7 +109,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/strategy.png" alt="" />
                     </div>
-                    <h3>Holistic Product Management</h3>
+                    <h3>Product & Project <br>Management</h3>
                     <div class="serviceText">
                         <p> Navigate the complexities of product lifecycles with confidence with our holistic product management services. We offer comprehensive support at every stage of development, from ideation to launch and beyond. Our seasoned product managers work closely with you to define product requirements, prioritize features, and establish clear goals and timelines. </p>
                     </div>
@@ -118,7 +118,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/strategy.png" alt="" />
                     </div>
-                    <h3>Efficient Project Management Solutions</h3>
+                    <h3>Software & integration Development</h3>
                     <div class="serviceText">
                         <p> Optimize project delivery and drive developer success with our efficient project management solutions. We understand the importance of timely delivery and effective communication in project execution. Our experienced project managers leverage industry-leading methodologies and tools to streamline workflows, track progress, and mitigate risks. </p>
                     </div>
@@ -127,7 +127,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/delivery-management.svg" alt="" />
                     </div>
-                    <h3>Rigorous Testing <br>&</br> Quality Assurance</h3>
+                    <h3>Testing & Iterative</br> Enhancements</h3>
                     <div class="serviceText">
                         <p> Ensure the reliability and performance of your software products with our rigorous testing and quality assurance services. We leave no stone unturned in our quest for perfection, conducting thorough testing at every stage of development. With meticulous attention to detail and a commitment to excellence, we identify and address potential risks before they impact your users, ensuring a seamless and enjoyable user experience. </p>
                     </div>
@@ -136,7 +136,7 @@
                     <div class="serviceImg">
                         <img src="assets/images/qa.svg" alt="" />
                     </div>
-                    <h3> Optimized Delivery Management <br>&</br> Iterative Enhancements </h3>
+                    <h3> Email Marketing </h3>
                     <div class="serviceText">
                         <p> Deliver exceptional user experiences with our optimized delivery management services. We understand the importance of a smooth and seamless delivery process in driving user satisfaction and loyalty. Beyond delivery, we continue to support you with iterative enhancements and updates, refining your product based on user feedback and evolving market trends. Experience the difference with our comprehensive delivery management solutions, and delight your users with seamless, on-time deliveries and continuous improvements. </p>
                     </div>
